@@ -1,3 +1,8 @@
+2019-10-21  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	* parser.c (cp_parser_class_head): Improve error recovery upon
+	extra qualification error.
+
 2019-10-21  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/92015
